<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<Button
    android:id="@+id/BtnRadioButton"
    android:text="@string/RadioButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:onClick="lanzarRadioButton"
    />

<Button 
    android:id="@+id/BtnCheckbox"
    android:text="@string/Checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="lanzarCheckBox"
    />

<Button
    android:id="@+id/BtnHola"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="lanzarSaludo"
    android:text="@string/Holamundo" />

<EditText
    android:id="@+id/EdtNombre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="text" >

    <requestFocus />
</EditText>

</LinearLayout>
