<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/lblMensaje"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
        	  android:text="" />
    
<RadioGroup android:id="@+id/gruporb"
    	android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" >
    	
    	<RadioButton android:id="@+id/botonRadio1"
    	      android:layout_width="wrap_content"
    	      android:layout_height="wrap_content"
    	      android:text="@string/opcion_1" />
    	
    	<RadioButton android:id="@+id/botonRadio2"
    	      android:layout_width="wrap_content"
    	      android:layout_height="wrap_content"
    	      android:text="@string/opcion_2" />
    	<RadioButton android:id="@+id/botonRadio3"
    		  android:layout_width="wrap_content"
    		  android:layout_height="wrap_content"
    		  android:text="@string/opcion_3" />
  		
</RadioGroup>
</LinearLayout>
